MODIFY index.html ADD the game kolaps.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <ul class="links">
       <li><a href="https://www.youtube.com">YouTube</a></li>
       <li><a href="https://www.twitch.tv">Twitch</a></li>
+      <li><a href="https://www.pixy.cz/apps/hry/kolaps.html">Hra Kolaps</a></li>
     </ul>
   </div>
 
