--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <li><a href="vykaz.html">Výkaz práce</a></li>
       <li><a href="odkazy.html">Odkazy</a></li>
       <li><a href="vimModeStateDiagram.svg">Vim Mode State Diagram</a></li>
+      <li><a href="https://paletton.com/">Paletton</a></li>
     </ul>
   </div>
 
