MODIFY index.html ADD Linux Cheat Sheet

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <li><a href="https://www.codecademy.com">Codecademy</a></li>
       <li><a href="ip-subnetting.html">IP subaddresace</a></li>
       <li><a href="https://du.cesnet.cz/cs/navody/object_storage/rclone/rclone-basic-controls/start">Manuál rclone</a></li>
+      <li><a href="https://dev.to/grayhat/the-ultimate-linux-command-cheat-sheet-for-data-engineers-and-analysts-570h">Linux Command Cheat Sheet for Data Engineers and Analysts </a></li>
     </ul>
   </div>
 
