UPDATE index.html MODIFY section Učení

--- a/index.html
+++ b/index.html
@@ -108,20 +108,35 @@
 
 	<div class="category">
 		<h2>Učení</h2>
-		<ul class="links">
-			<li><a href="https://www.w3schools.com/">W3schools</a></li>
-			<!-- https://www.w3schools.com/favicon.ico -->
-			<li><a href="https://www.khanacademy.org">Khan Academy</a></li>
-			<!-- view-source:https://cdn.kastatic.org/images/favicon.ico?logo -->
-			<li><a href="https://www.codecademy.com">Codecademy</a></li>
-			<!-- view-source:https://www.codecademy.com/favicon.ico -->
-			<li><a href="ip-subnetting.html">IP subaddresace</a></li>
-			<li><a href="https://nwalsh.com/docs/tutorials/xsl/xsl/slides.html">XSL Concepts and Practical Use</a></li>
-			<!-- https://nwalsh.com/favicon.ico -->
-			<li><a href="https://du.cesnet.cz/cs/navody/object_storage/rclone/rclone-basic-controls/start">Manuál rclone</a></li>
-			<!-- https://rclone.org/img/rclone-32x32.png -->
-			<li><a href="https://dev.to/grayhat/the-ultimate-linux-command-cheat-sheet-for-data-engineers-and-analysts-570h">Linux Command Cheat Sheet for Data Engineers and Analysts </a></li>
-			<!-- https://dev-to-uploads.s3.amazonaws.com/uploads/articles/8j7kvp660rqzt99zui8e.png -->
+		<span class="icon-links">
+			<a href="https://www.w3schools.com/" target="_blank">
+				<img src="https://www.w3schools.com/favicon.ico" height="48"><br/>
+				<span>W3schools</span>
+			</a>
+			<a href="https://www.khanacademy.org" target="_blank">
+				<img src="https://cdn.kastatic.org/images/favicon.ico?logo" height="48"><br/>
+				<span>Khan Academy</span>
+			</a>
+			<a href="https://www.codecademy.com" target="_blank">
+				<img src="https://www.codecademy.com/favicon.ico " height="48"><br/>
+				<span>Codecademy</span>
+			</a>
+			<a href="ip-subnetting.html" target="_blank">
+				<img src="ip-address.png" height="48"><br/>
+				<span>IP subaddresace</span>
+			</a>
+			<a href="https://nwalsh.com/docs/tutorials/xsl/xsl/slides.html" target="_blank">
+				<img src="https://nwalsh.com/favicon.ico" height="48"><br/>
+				<span>XSL Concepts and Practical Use</span>
+			</a>
+			<a href="https://du.cesnet.cz/cs/navody/object_storage/rclone/rclone-basic-controls/start" target="_blank">
+				<img src="https://rclone.org/img/rclone-32x32.png " height="48"><br/>
+				<span>Manuál rclone</span>
+			</a>
+			<a href="https://dev.to/grayhat/the-ultimate-linux-command-cheat-sheet-for-data-engineers-and-analysts-570h" target="_blank">
+				<img src="https://dev-to-uploads.s3.amazonaws.com/uploads/articles/8j7kvp660rqzt99zui8e.png" height="48"><br/>
+				<span>Linux Command Cheat Sheet</span>
+			</a>
 		</ul>
 	</div>
 
