--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<div class="category">
 <h2>Práce</h2>
 <span class="icon-links">
-		<a href="vykaz.html" target="_blank"><div>Výkaz práce</div></a>
-		<a href="odkazy.html" target="_blank"><div>Odkazy</div></a>
-		<a href="https://rawgit.com/darcyparker/1886716/raw/eab57dfe784f016085251771d65a75a471ca22d4/vimModeStateDiagram.svg" target="_blank"><div>Vim Mode State Diagram</div></a>
+		<a href="vykaz.html" target="_blank"><img src="VykazPrace.png" height="48"><div>Výkaz práce</div></a>
+		<a href="odkazy.html" target="_blank"><img src="SbirkaOdkazu64.png" height="48"><div>Odkazy</div></a>
+		<a href="https://rawgit.com/darcyparker/1886716/raw/eab57dfe784f016085251771d65a75a471ca22d4/vimModeStateDiagram.svg" target="_blank"><img src="Vimlogo.svg" height="48"><div>Vim Mode State Diagram</div></a>
 		<a href="https://paletton.com/" target="_blank"><img src="https://paletton.com/img/favicon-128.png" height="48"><div>Paletton</div></a>
 	</span>
 </div>
