--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/svg+xml" href="logo.svg">
+<link rel="shortcut icon" type="image/svg+xml" href="logo.svg">
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Sbírka odkazů</title>
 <link rel="StyleSheet" href="style.css" type="text/css">
@@ -40,6 +41,7 @@
 		<a href="https://www.khanacademy.org" target="_blank"><img src="https://cdn.kastatic.org/images/favicon.ico?logo" height="48"><div>Khan Academy</div></a>
 		<a href="https://www.codecademy.com" target="_blank"><img src="https://www.codecademy.com/favicon.ico" height="48"><div>Codecademy</div></a>
 		<a href="ip-subnetting.html" target="_blank"><img src="ip-address.png" height="48"><div>IP subaddresace</div></a>
+		<a href="https://stackoverflow.com/questions/3577641/how-do-you-parse-and-process-html-xml-in-php?rq=1" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Stack_Overflow_icon.svg" height="48"><div>How do you parse and process HTML/XML in PHP?</div></a>
 		<a href="https://nwalsh.com/docs/tutorials/xsl/xsl/slides.html" target="_blank"><img src="https://nwalsh.com/favicon.ico" height="48"><div>XSL Concepts and Practical Use</div></a>
 		<a href="https://du.cesnet.cz/cs/navody/object_storage/rclone/rclone-basic-controls/start" target="_blank"><img src="https://rclone.org/img/rclone-32x32.png" height="48"><div>Manuál rclone</div></a>
 		<a href="https://dev.to/grayhat/the-ultimate-linux-command-cheat-sheet-for-data-engineers-and-analysts-570h" target="_blank"><img src="https://dev-to-uploads.s3.amazonaws.com/uploads/articles/8j7kvp660rqzt99zui8e.png" height="48"><div>Linux Command Cheat Sheet</div></a>
