--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<a href="odkazy.html" target="_blank"><img src="SbirkaOdkazu64.png" height="48"><div>Odkazy</div></a>
 		<a href="https://rawgit.com/darcyparker/1886716/raw/eab57dfe784f016085251771d65a75a471ca22d4/vimModeStateDiagram.svg" target="_blank"><img src="Vimlogo.svg" height="48"><div>Vim Mode State Diagram</div></a>
 		<a href="https://paletton.com/" target="_blank"><img src="https://paletton.com/img/favicon-128.png" height="48"><div>Paletton</div></a>
+		<a href="https://chatgpt.com" target="_blank"><img src="https://cdn.oaistatic.com/assets/favicon-eex17e9e.ico" height="48"><div>ChatGPT</div></a>
 	</span>
 </div>
 
@@ -45,6 +46,7 @@
 		<a href="https://nwalsh.com/docs/tutorials/xsl/xsl/slides.html" target="_blank"><img src="https://nwalsh.com/favicon.ico" height="48"><div>XSL Concepts and Practical Use</div></a>
 		<a href="https://du.cesnet.cz/cs/navody/object_storage/rclone/rclone-basic-controls/start" target="_blank"><img src="https://rclone.org/img/rclone-32x32.png" height="48"><div>Manuál rclone</div></a>
 		<a href="https://dev.to/grayhat/the-ultimate-linux-command-cheat-sheet-for-data-engineers-and-analysts-570h" target="_blank"><img src="https://dev-to-uploads.s3.amazonaws.com/uploads/articles/8j7kvp660rqzt99zui8e.png" height="48"><div>Linux Command Cheat Sheet</div></a>
+		<a href="https://dev.to/aryan015/localstorage-vs-sessionstorage-vs-cookie-ikj" target="_blank"><img src="https://dev-to-uploads.s3.amazonaws.com/uploads/articles/8j7kvp660rqzt99zui8e.png" height="48"><div>LocalStorage vs SessionStorage vs Cookie</div></a>
 	</span>
 </div>
 
