--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <span class="icon-links">
 		<a href="vykaz.html" target="_blank"><img src="VykazPrace.png" height="48"><div>Výkaz práce</div></a>
 		<a href="odkazy.html" target="_blank"><img src="SbirkaOdkazu64.png" height="48"><div>Odkazy</div></a>
+		<a href="awg-tabulka.html" target="_blank"><div>Převodní tabulka AWG</div></a>
 		<a href="https://rawgit.com/darcyparker/1886716/raw/eab57dfe784f016085251771d65a75a471ca22d4/vimModeStateDiagram.svg" target="_blank"><img src="Vimlogo.svg" height="48"><div>Vim Mode State Diagram</div></a>
 		<a href="https://paletton.com/" target="_blank"><img src="https://paletton.com/img/favicon-128.png" height="48"><div>Paletton</div></a>
 		<a href="https://chatgpt.com" target="_blank"><img src="https://cdn.oaistatic.com/assets/favicon-eex17e9e.ico" height="48"><div>ChatGPT</div></a>
